MPL/test/MplPasses/TypeChecker/cases/typecheck/positive/47.mpl
fun v1 :: -> Double =
    -> 3 + 3.4

fun v2 :: -> Double =
    -> 3.4 + 3

fun v3 :: -> Int =
    -> 3
