MPL/test/MplPasses/TypeChecker/cases/typecheck/negative/9.mpl
fun n6  :: -> Int =
    -> 3 + 3.4 

fun n6  :: -> Int =
    -> 3.4 + 3 
